frontends/web/src/components/forms/input.module.css
.inputContainer {
    width: 100%;
    margin-bottom: var(--space-half);
    position: relative;
}

.inputContainer input[type=checkbox] {
    width: auto;
    height: auto;
}

.labelContainer {
    align-items: baseline;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.labelContainer label {
    display: block;
    margin: 0 0 var(--space-quarter) 0;
}

.align-left label {
    justify-self: flex-start;
}

.align-right label {
    flex-grow: 1;
    justify-self: flex-end;
    text-align: right;
}

.align-right input {
    text-align: right;
}

.inputField {
    background-color: var(--background-secondary);
    border-color: var(--background-quaternary);
    border-radius: 2px;
    border-style: solid;
    border-width: var(--border-width);
    display: flex;
    gap: var(--space-eight); /* in case there is a child */
    height: var(--input-height);
    padding: 0 var(--space-half);
    width: 100%;
    transition: border-color .2s ease-out;
    will-change: border-color;
}

.inputField input {
    background-color: transparent;
    border: none;
    font-family: var(--font-family);
    font-size: var(--size-default);
    font-weight: 400;
    height: var(--input-height);
    padding: 0;
    width: 100%;
}
.inputField input:focus {
    outline: none;
}

.inputField:focus-within {
    border-color: var(--color-blue);
    outline: none;
}

.inputField input::placeholder {
    color: var(--color-secondary);
}

.inputField input[disabled] {
    /* background-color: var(--background-secondary) !important; */
    border-color: var(--background) !important;
    color: var(--color-secondary) !important;
    cursor: not-allowed;
}

.isTransparent input[disabled] {
    border-color: var(--background);
    color: var(--color-default) !important;
    cursor: default;
}

.errorText {
    color: var(--color-softred) !important;
}

.errorText > span > span {
    margin-left: 5px;
}

.inputField input[type=number],
.inputField input[type=password],
.inputField input[type=text] {
    background: transparent;
}

/* webkit */
.inputField input[type=number]::-webkit-inner-spin-button,
.inputField input[type=number]::-webkit-outer-spin-button {
    margin: 0;
    -webkit-appearance: none;
}

/* firefox */
.inputField input[type=number] {
  -moz-appearance: textfield;
}

